--- a/Workshop Portfolio/templates/projects.html
+++ b/Workshop Portfolio/templates/projects.html
@@ -23,6 +23,14 @@
         <span class="badge">CSS</span>
       </div>
     </div>
+    <h3>Line Follower Rover</h3>
+      <p>A Rover which followes the line </p>
+      <div class="skills">
+        <span class="badge">IOT Sensor</span>
+        <span class="badge">Using Aurduino Uno</span>
+      </div>
+    </div>
+
 
 
     </div>
