--- a/Workshop Portfolio/templates/resume1.html
+++ b/Workshop Portfolio/templates/resume1.html
@@ -29,7 +29,7 @@
                 <li>C</li>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>Cyber SEcurity</li>
+                <li>Cyber Security</li>
 p
             </ul>
 
@@ -38,6 +38,8 @@ p
             <ul><li>Using python and pygame.</li></ul>
             <p><strong>Portfolio Website</strong></p>
             <ul><li>Responsive portfolio site showcasing personal projects.</li></ul>
+            <p><strong>Line Following Rover</strong></p>
+            <ul><li>Using IOT sensor and Arduino uno.</li></ul>
         </div>
     </div>
 </section>
